# poetry-deps-formatter

./: .gitignore  README.rst  pyproject.toml
.circleci/: config.yml
poetry_deps_formatter/: __init__.py  formatter.py
tests/: test_formatter.py  test_poetry_deps_formatter.py
