[tool.poetry]
name = "poetry-deps-formatter"
version = "0.1.0"
description = "Beautify dependencies in pyproject.yaml based on poetry.lock"
authors = ["Jack Klimov <jaklimoff@gmail.com>"]

[tool.poetry.scripts]
format = "poetry-deps-formatter:formatter"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"                                  # Python Library for Tom's Obvious, Minimal Language ·· https://pypi.org/project/toml/ 

[tool.poetry.dev-dependencies]
pytest = "^5.2"                                   # pytest: simple powerful testing with Python ·· https://pypi.org/project/pytest/ 
mock = "^4.0.2"                                   # Rolling backport of unittest.mock for all Pythons ·· https://pypi.org/project/mock/


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
